[gd_scene load_steps=9 format=3 uid="uid://dhjt6pnljuyep"]

[ext_resource type="Texture2D" uid="uid://d0gtx13b1nc1t" path="res://resources/graphics/player/player.png" id="1_pjbis"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_y4548"]
[ext_resource type="Texture2D" uid="uid://g553ggtk62r0" path="res://resources/graphics/decals/white.png" id="3_urq3k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pryts"]
radius = 68.0074

[sub_resource type="Gradient" id="Gradient_dvobj"]
offsets = PackedFloat32Array(0, 0.975806)
colors = PackedColorArray(0.490196, 1, 1, 0.698039, 0.858824, 1, 1, 0.482353)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vch38"]
gradient = SubResource("Gradient_dvobj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_m4hxs"]
particle_flag_disable_z = true
spread = 18.71
gravity = Vector3(0, 0, 0)
initial_velocity_min = 750.0
initial_velocity_max = 1000.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.25
scale_max = 0.55
color = Color(0.490196, 1, 1, 0.698039)
color_ramp = SubResource("GradientTexture1D_vch38")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_vii1h"]
polygon = PackedVector2Array(16, -63, 28, -49, 42, -32, 58, -22, 74, -17, 95, -10, 118, 3, 127, 18, 120, 32, 103, 40, 92, 50, 69, 55, 45, 49, 34, 42, 19, 51, -10, 63, -42, 59, -53, 40, -64, 14, -66, -19, -54, -42, -35, -51, -9, -60)

[node name="Player" type="CharacterBody2D" groups=["Enity"]]
collision_mask = 31
script = ExtResource("1_y4548")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(31, 0)
rotation = 1.5708
texture = ExtResource("1_pjbis")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pryts")

[node name="LaserReloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeReloadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPosition" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(127, 18)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(123, 31)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(122, 9)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(132, 20)
emitting = false
process_material = SubResource("ParticleProcessMaterial_m4hxs")
texture = ExtResource("3_urq3k")
lifetime = 0.2
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_vii1h")

[connection signal="timeout" from="LaserReloadTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeReloadTimer" to="." method="_on_grenade_reload_timer_timeout"]
